--- a/auth-service-dev.yml
+++ b/auth-service-dev.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: authservice
+    name: auth-service
 miapp:
   mensajebienvenida: "Bienvenido al sistema"
   featuretoggle:true
